--- a/src/app/features/modals/settings/rclone-config-modal/rclone-config-modal.component.html
+++ b/src/app/features/modals/settings/rclone-config-modal/rclone-config-modal.component.html
@@ -182,7 +182,7 @@
 
       <div class="overlay-content">
         @if (isSecurityPage) {
-          <app-security-settings></app-security-settings>
+          <app-security-settings style="height: 100%"></app-security-settings>
         } @else {
           @if (hasSearchQuery) {
             <div class="search-results-info">
